# food-forge

./: README.md
MESS MANAGEMENT - Copy/: .gitignore  AUTH_TRIGGER.sql  COMPLETE_DEPLOYMENT_GUIDE.md  COPY_TO_SUPABASE_SQL.sql  DEPLOYMENT_STATUS.md  FIX_FOREIGN_KEY.sql  NEON_DATABASE_SQL.sql  NEW_DATABASE_SQL.sql  README.md  VERCEL_SETUP.md  generate-secret.bat  package-lock.json  walkthrough.md
MESS MANAGEMENT - Copy/backend/: RAILWAY_DEPLOYMENT.md  RAILWAY_FIX.md  deploy-railway.bat  deploy-railway.sh  package-lock.json  pyproject.toml  railway.toml  requirements.txt  start.cmd  start.sh
MESS MANAGEMENT - Copy/backend/app/: main.py  package-lock.json  package.json
MESS MANAGEMENT - Copy/backend/app/routes/: admin.py  menu.py  ops.py  reports.py
MESS MANAGEMENT - Copy/frontend/: .env.production  create-admin.mjs  errors.txt  init-db.mjs  migrate-payments.mjs  package-lock.json  package.json  seed-users.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
MESS MANAGEMENT - Copy/frontend/app/: globals.css  layout.tsx  page.tsx
MESS MANAGEMENT - Copy/frontend/app/admin/: page.tsx
MESS MANAGEMENT - Copy/frontend/app/api/admin/dashboard/: route.ts
MESS MANAGEMENT - Copy/frontend/app/api/health/: route.ts
MESS MANAGEMENT - Copy/frontend/app/checkin/: page.tsx
MESS MANAGEMENT - Copy/frontend/app/login/: page.tsx
MESS MANAGEMENT - Copy/frontend/app/student/: page.tsx
MESS MANAGEMENT - Copy/frontend/components/: Navbar.tsx  Providers.tsx  QRScanner.tsx
MESS MANAGEMENT - Copy/frontend/lib/: auth.ts  db.ts
(+9 files in other folders)
