[tool.poetry]
name = "mess-management-api"
version = "0.1.0"
description = "Food Forge Mess Management API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
supabase = "^2.3.5"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
email-validator = "^2.1.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
